sorteio-nomes: footer

--- a/sorteio-nomes/index.html
+++ b/sorteio-nomes/index.html
@@ -14,6 +14,9 @@
     </section>
     <button>Sortear</button>
     <section id="names"></section>
+    <footer>
+      Feito por <strong><a href="http://www.github.com/guivictorr" target="_blank">Guilherme Victor</a></strong>
+    </footer>
   </main>
   <script src="main.js"></script>
 </body>
